--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,36 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+        <script src="JS/DataTable.js" type="text/javascript"></script>
+
+        <script src="JS/Table.js" type="text/javascript"></script>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+        <script type="text/javascript" src="//cdn.datatables.net/1.10.11/js/jquery.dataTables.js"></script>
+
     </head>
     <body>
-        <div>TODO write content</div>
+        <div class="table-bordered">        
+            <table id="Tabla_prueba" class="table table-striped table-bordered dt-responsive nowrap">
+                <thead>
+                    <tr>
+                        <th>Rut</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Fecha De Cumpleaños</th>
+                    </tr>
+                </thead>
+                <tbody>
+                  <td></td>
+                </tbody>
+
+            </table>
+        </div>
     </body>
 </html>
